Updated run scripts