@@ -1,3 +1,3 @@
 #!/bin/bash
 JFX_PATH=/full/path/to/jfx
-${JAVA_HOME}/bin/java --module-path ${JFX_PATH}/lib --add-modules javafx.controls,javafx.fxm -jar NovaPoshta.jar &
+${JAVA_HOME}/bin/java -Djdk.gtk.version=2 --module-path ${JFX_PATH}/lib --add-modules javafx.controls,javafx.fxml --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED -jar NovaPoshta.jar &
